--- a/css/style.css
+++ b/css/style.css
@@ -1173,6 +1173,10 @@ section.category .category-slider {
   }
 }
 @media (max-width: 991.98px) {
+  
+  .games .main-content, .gallery .main .container-fluid.slide, section.category .category-slider {
+    height:auto;
+  }
   .gallery .slick-slide.slick-center {
     min-width: 400px;
   }
